Update index.html title and add meta description and add global styles

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Midas Capital Dashboard</title>
+  <meta name="description"
+    content="Secure administrative dashboard for Midas Capital financial operations and portfolio management">
+  <title>Midas Capital Backoffice</title>
 </head>
 
 <body>
